--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 			color: red;
 		}
 	</style>
+	<style type="text/css" href="templates/test.css"></style>
 </head>
 <body>
 	<h1>This is the header</h1>
