--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<h1>This is the header</h1>
 	<p>This is the paragraph</p>
 	<p>This is the second paragraph</p>
-	<h1>ajfhsakh</h1>
+	<h1>du luong huynh</h1>
 	<h1>fdshfidugufia</h1>
 	
 </body>
